--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
   <title>Address Book</title>
-  <title></title>
 </head>
 <body>
   <div class="container">
@@ -28,6 +27,18 @@
             <label for="new-phone-number">Phone Number</label>
             <input type="text"  class="form-control" id="new-phone-number">
           </div>
+          <div class="form-group">
+            <label for="new-email-address">Email Address</label>
+            <input type="text"  class="form-control" id="new-email-address">
+          </div>
+          <div class="form-group">
+            <label for="new-personal-address">Personal Address</label>
+            <input type="text"  class="form-control" id="new-personal-address">
+          </div>
+          <div class="form-group">
+            <label for="new-work-address">Work Address</label>
+            <input type="text"  class="form-control" id="new-work-address">
+          </div>
           <button type="submit" class="btn-primary">Add</button>
         </form>
         <hr>
@@ -40,6 +51,9 @@
           <p>First Name: <span class="first-name"></span></p>
           <p>Last Name: <span class="last-name"></span></p>
           <p>Phone Number: <span class="phone-number"></span></p>
+          <p>Email Address: <span class="email-address"></span></p>
+          <p>Personal Address: <span class="personal-address"></span></p>
+          <p>Work Address: <span class="work-address"></span></p>
           <div id="buttons">
           </div>
         </div>
